# faststack

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  database.db  main.py  pyproject.toml  requirements.txt
backend/.choreo/: component.yaml
backend/core/: config.py  models.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  vite.config.js
frontend/src/: App.jsx  util.js
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
